--- a/src/app/dialog-clear/dialog-clear.component.css
+++ b/src/app/dialog-clear/dialog-clear.component.css
@@ -1,4 +1,5 @@
-::ng-deep #info .ui-message {
+::ng-deep #info .ui-message,
+.message {
   font-size: smaller;
   width: 100%;
 }
@@ -14,4 +15,11 @@
 
 ::ng-deep .ui-multiselect {
   width: 90%;
+}
+
+.message {
+  margin-top: 5px;
+  padding: 5px;
+  background-color: #7fbcec;
+  border-radius: 3px;
 }
