--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -198,9 +198,11 @@
       [columns]="columnsTable" *ngIf="modalTable && minimizeMaximize" [dataKey]="dataKey()" [value]="featureDptos"
       [scrollable]="true" [(selection)]="featuresSelected" (onRowSelect)="onRowSelect($event)"
       (onRowUnselect)="onRowUnselect($event)" scrollHeight="228px" [resizableColumns]="true"
-      [showCurrentPageReport]="true" currentPageReportTemplate="Mostrando {first} - {last} de {totalRecords}">
+      [showCurrentPageReport]="true" currentPageReportTemplate="Mostrando {first} - {last} de {totalRecords}"
+      (onHeaderCheckboxToggle)="onHeaderCheckboxToggle($event)">
       <ng-template pTemplate="colgroup" let-columns>
         <colgroup>
+          <col style="width: 3em !important;">
           <col style="width: 28px !important;">
           <col style="width: 28px !important;" *ngIf="supportsAttachment">
           <ng-container *ngIf="columns.length > 2">
@@ -213,6 +215,9 @@
       </ng-template>
       <ng-template pTemplate="header" let-columns>
         <tr>
+          <th style="width: 3em">
+            <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
+          </th>
           <th></th>
           <th *ngIf="supportsAttachment"></th>
           <th *ngFor="let col of columns" pResizableColumn [pSortableColumn]="keySort(col.name)">
@@ -221,6 +226,7 @@
           </th>
         </tr>
         <tr>
+          <th></th>
           <th></th>
           <th *ngIf="supportsAttachment"></th>
           <th *ngFor="let col of columns; let i = index">
@@ -249,6 +255,9 @@
       </ng-template>
       <ng-template pTemplate="body" let-item let-columns="columns">
         <tr [pSelectableRow]="item">
+          <td>
+            <!-- <p-tableCheckbox [value]="item"></p-tableCheckbox> -->
+          </td>
           <td style="padding: 0px; width: 28px !important;" title="Acerca a">
             <button class="esri-button" (click)="onRowSelectGoTo(item)">
               <i class="esri-icon-zoom-in-magnifying-glass"></i>
