--- a/src/app/dialog-symbology-change/dialog-symbology-change.component.html
+++ b/src/app/dialog-symbology-change/dialog-symbology-change.component.html
@@ -1,41 +1,54 @@
-<button pButton class="ui-button-rounded ui-button-secondary" title="Ayuda" style="color: #007ad8; float: right;"
-  (click)="requestHelp('h-simbologia')" icon="pi pi-question"></button>
-<form [formGroup]="changeForm" (ngSubmit)="changeForm.valid && setupChange()">
-  <div class="ui-g ui-fluid">
-    <div class="ui-g-12 ui-md-6">
-      Capa Seleccionada:
-    </div>
-    <div class="ui-g-12 ui-md-6">
-      <p-dropdown formControlName="feature" [options]="optionsLayers" placeholder="Seleccione una capa"></p-dropdown>
-    </div>
-    <div class="ui-g-12 ui-md-6">
-      <p>Color para el borde: </p>
-    </div>
-    <div class="ui-g-12 ui-md-6">
-      <p-colorPicker format="rgb" formControlName="borderColor">
-      </p-colorPicker>
-    </div>
-    <div class="ui-g-12 ui-md-6">
-      <p>Grosor del borde: </p>
-    </div>
-    <div class="ui-g-12 ui-md-6">
-      <input type="number" formControlName="borderSize" pInputText>
-    </div>
-    <div class="ui-g-12 ui-md-6">
-      <p>Color para el relleno: </p>
-    </div>
-    <div class="ui-g-12 ui-md-6">
-      <p-colorPicker format="rgb" formControlName="fillColor">
-      </p-colorPicker>
-    </div>
+<div class="ui-g ui-fluid">
+  <div class="ui-g-12 ui-md-11">
+    <form [formGroup]="changeForm" (ngSubmit)="changeForm.valid && setupChange()">
+      <div class="ui-g ui-fluid">
+        <div class="ui-g-12 ui-md-6">
+          Capa Seleccionada:
+        </div>
+        <div class="ui-g-12 ui-md-6">
+          <p-dropdown formControlName="feature" [options]="optionsLayers" placeholder="Seleccione una capa">
+          </p-dropdown>
+        </div>
+        <div class="ui-g-12 ui-md-6">
+          <p>Color para el borde: </p>
+        </div>
+        <div class="ui-g-12 ui-md-6">
+          <p-colorPicker format="rgb" formControlName="borderColor">
+          </p-colorPicker>
+        </div>
+        <div class="ui-g-12 ui-md-6">
+          <p>Grosor del borde: </p>
+        </div>
+        <div class="ui-g-12 ui-md-6">
+          <input type="number" formControlName="borderSize" pInputText>
+        </div>
+        <div class="ui-g-12 ui-md-6">
+          <p>Color para el relleno: </p>
+        </div>
+        <div class="ui-g-12 ui-md-6">
+          <p-colorPicker format="rgb" formControlName="fillColor" [disabled]="changeForm.value.transparent">
+          </p-colorPicker>
+        </div>
+        <div class="ui-g-12 ui-md-6"> </div>
+        <div class="ui-g-12 ui-md-6">
+          <p style="margin-bottom: 3px;">Transparencia: {{changeForm.value.transparency}}</p>
+          <p-slider formControlName="transparency" [style]="{'width':'14em'}" [step]="0.1" [min]="0" [max]="1">
+          </p-slider>
+        </div>
+      </div>
+      <div class="ui-g ui-fluid">
+        <div class="ui-g-12 ui-md-12">
+          <button pButton type="submit" [disabled]="!changeForm.valid" icon="pi pi-check" iconPos="left"
+            class="ui-button-rounded ui-button-info" label="Aplicar colores"></button>
+        </div>
+      </div>
+    </form>
   </div>
-  <div class="ui-g ui-fluid">
-    <div class="ui-g-12 ui-md-12">
-      <button pButton type="submit" [disabled]="!changeForm.valid" icon="pi pi-check" iconPos="left"
-        class="ui-button-rounded ui-button-info" label="Aplicar colores"></button>
-    </div>
+  <div class="ui-g-12 ui-md-1">
+    <button pButton class="ui-button-rounded ui-button-secondary" title="Ayuda" style="color: #007ad8;"
+      (click)="requestHelp('h-simbologia')" icon="pi pi-question"></button>
   </div>
-</form>
+</div>
 <br>
 <p-message id="infoMedicion" severity="info"
   text="El color seleccionado se aplica a la capa actual. Si la capa actual es de poligonos el color se aplica al relleno de capa.">
