Ajuste: se cierran los dialogos al terminar procesos

--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -151,7 +151,7 @@
       </div>
     </div>
     <p>3. Seleccione las capas a extraer</p>
-    <div style="display: grid; grid-template-columns: auto auto;">
+    <div style="display: grid; grid-template-columns: auto auto; margin-bottom: 5px; margin-right: 5px;">
       <p-multiSelect [options]="optionsLayers" defaultLabel="Click aquí..." selectedItemsLabel="{0} items seleccionados"
         [(ngModel)]="selectedLayers"></p-multiSelect>
       <div align="right">
