--- a/src/app/dialog-clear/dialog-clear.component.css
+++ b/src/app/dialog-clear/dialog-clear.component.css
@@ -10,7 +10,7 @@
   grid-template-rows: auto auto auto auto;
   grid-gap: 5px;
   margin-bottom: 5px;
-  max-width: 450px !important;
+  min-width: 440px !important;
 }
 
 ::ng-deep .ui-multiselect {
@@ -22,4 +22,8 @@
   padding: 5px;
   background-color: #7fbcec;
   border-radius: 3px;
+}
+
+::ng-deep body .ui-tabview.ui-tabview-top .ui-tabview-nav li a {
+  font-weight: 400 !important;
 }
