Ajuste: cambio de nombre en simbología

--- a/src/app/dialog-symbology-change/dialog-symbology-change.component.html
+++ b/src/app/dialog-symbology-change/dialog-symbology-change.component.html
@@ -31,7 +31,7 @@
         </div>
         <div class="ui-g-12 ui-md-6"> </div>
         <div class="ui-g-12 ui-md-6">
-          <p style="margin-bottom: 3px;">Transparencia: {{changeForm.value.transparency}}</p>
+          <p style="margin-bottom: 3px;">Transparencia de relleno: {{changeForm.value.transparency}}</p>
           <p-slider formControlName="transparency" [style]="{'width':'14em'}" [step]="0.1" [min]="0" [max]="1">
           </p-slider>
         </div>
