--- a/src/app/dialog-symbology-change/dialog-symbology-change.component.html
+++ b/src/app/dialog-symbology-change/dialog-symbology-change.component.html
@@ -20,20 +20,27 @@
           <p>Grosor del borde: </p>
         </div>
         <div class="ui-g-12 ui-md-6">
-          <input type="number" formControlName="borderSize" pInputText>
+          <input type="number" formControlName="borderSize" pInputText [min]="0">
         </div>
         <div class="ui-g-12 ui-md-6">
           <p>Color para el relleno: </p>
         </div>
         <div class="ui-g-12 ui-md-6">
-          <p-colorPicker format="rgb" formControlName="fillColor" [disabled]="changeForm.value.transparent">
+          <p-colorPicker format="rgb" formControlName="fillColor">
           </p-colorPicker>
         </div>
-        <div class="ui-g-12 ui-md-6"> </div>
         <div class="ui-g-12 ui-md-6">
           <p style="margin-bottom: 3px;">Transparencia de relleno: {{changeForm.value.transparency}}</p>
           <p-slider formControlName="transparency" [style]="{'width':'14em'}" [step]="0.1" [min]="0" [max]="1">
           </p-slider>
+        </div>
+        <div class="ui-g-12 ui-md-6 ui-g ui-fluid" align="center">
+          <div class="ui-g-12 ui-md-6">
+            <span>Muestra</span>
+          </div>
+          <div class="ui-g-12 ui-md-6" id="sample"
+            style="width: 30px; height: 30px; background-color: rgb(255, 0, 0); border: 10px solid rgb(0, 0, 0);">
+          </div>
         </div>
       </div>
       <div class="ui-g ui-fluid">
