Ajuste: solución a error en la acción Vista predeterminada

--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -18,7 +18,7 @@
       <div id="buttons">
         <button class="esri-button button1"
           style="background-color: #ffe73c; border-color: #ffe73c; border-radius: 4px;" title="Ver todo"
-          (click)="viewAll()">
+          (click)="home.go()">
           <i class="icofont-world" align="center"></i>
         </button>
         <button class="esri-button button2"
