--- a/src/app/dialog-analysis/dialog-analysis.component.html
+++ b/src/app/dialog-analysis/dialog-analysis.component.html
@@ -3,13 +3,14 @@
     (click)="_this.requestHelp('h-cobertura')" icon="pi pi-question"></button>
   <button pButton class="ui-button-rounded ui-button-secondary" title="Info" (click)="infoTool = !infoTool"
     style="color: #007ad8; float: right; margin-right: 5px; box-shadow: none;" icon="pi pi-info"></button>
-  <p> Departamentos seleccionados para el análisis:</p>
+  <p> Seleccionados los departamentos para realizar el análisis, posteriormente de click en el icono de cerrar
+     del select:</p>
   <p-multiSelect defaultLabel="Seleccione los departamentos para realizar análisis"
     (onChange)="_this.changeAttrTable($event)" [options]="_this.selectDpto" [(ngModel)]="_this.dptosSelected"
     optionLabel="attributes.departamen"></p-multiSelect>
   <div style="margin: 5px 0px;">
     <p-button icon="pi pi-globe" [disabled]="_this.dptosSelected.length == 0" (click)="generateAnalisisCobertura()"
-      label="Iniciar Análisis de Cobertura"></p-button>
+      label="Iniciar Análisis"></p-button>
   </div>
   <p-message [escape]="false" id="infoMedicion" severity="info" *ngIf="infoTool"
     text="Con este análisis se obtienen los <b>Bloques Explorativos que se <br> encuentran en la jurisdicción del Departamento</b> seleccionado,<br>indicando el porcentaje de cobertura de cada bloque. Seleccione los departamentos necesarios de la lista.">
