--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -97,9 +97,17 @@
       </div>
     </div>
     <div *ngIf="selectedPolygon != undefined && selectedPolygon != null && selectedPolygon.value == 'entity'">
-      <p>3. Seleccione la capa a la cual pertenece la entidad de interés</p>
+      <p>3. Seleccione la capa a la cual pertenece el elemento geográfico "molde de corte"</p>
       <p-dropdown [options]="optionsLayerExtractor" placeholder="Click aquí..." [(ngModel)]="layerExtractor">
       </p-dropdown>
+    </div>
+    <div *ngIf="selectedPolygon != undefined && selectedPolygon != null">
+      <span *ngIf="selectedPolygon.value == 'entity' && layerExtractor != undefined">
+        4. Haga click en el mapa sobre un elemento geográfico “molde de corte”
+      </span>
+      <span *ngIf="selectedPolygon.value != 'entity'">
+        3. Dibuje en el mapa el polígono
+      </span>
     </div>
     <p-button label="Extraer" icon="pi pi-download" (onClick)="extractShape()" [style]="{'margin-top': '5px'}">
     </p-button>
@@ -118,7 +126,7 @@
 <!-- Fin del modal de extracción de datos -->
 
 <!-- Modal de análisis de departamento -->
-<p-dialog header="Análisis de Cobertura por Departamento" [(visible)]="modalAnalysis" [resizable]="false"
+<p-dialog header="Análisis de Departamento" [(visible)]="modalAnalysis" [resizable]="false"
   (onHide)="onHideDialogAnalisis()" [focusOnShow]="false" [style]="{'width': '390px'}" position="topright">
   <div *ngIf="modalAnalysis">
     <app-dialog-analysis [_this]="this"></app-dialog-analysis>
