Ajuste: cambio de color a submenú Ubicar coordenada

--- a/src/app/map-viewer/map-viewer.component.css
+++ b/src/app/map-viewer/map-viewer.component.css
@@ -743,7 +743,7 @@ p-sidebar {
 }
 
 ::ng-deep .esri-coordinate-conversion__tools .esri-widget--button {
-  background-color: #f4f4f4;
+  background-color: #afafaf;
 }
 
 ::ng-deep .esri-coordinate-conversion {
