--- a/src/app/dialog-symbology-change/dialog-symbology-change.component.html
+++ b/src/app/dialog-symbology-change/dialog-symbology-change.component.html
@@ -1,5 +1,5 @@
 <div class="ui-g ui-fluid">
-  <div class="ui-g-12 ui-md-11">
+  <div class="ui-g-12 ui-md-10">
     <form [formGroup]="changeForm" (ngSubmit)="changeForm.valid && setupChange()">
       <div class="ui-g ui-fluid">
         <div class="ui-g-12 ui-md-6">
@@ -51,12 +51,14 @@
       </div>
     </form>
   </div>
-  <div class="ui-g-12 ui-md-1">
+  <div class="ui-g-12 ui-md-2">
+    <button pButton class="ui-button-rounded ui-button-secondary" title="Info" (click)="infoTool = !infoTool"
+      style="color: #007ad8; margin-right: 5px; box-shadow: none;" icon="pi pi-info"></button>
     <button pButton class="ui-button-rounded ui-button-secondary" title="Ayuda" style="color: #007ad8;"
       (click)="requestHelp('h-simbologia')" icon="pi pi-question"></button>
   </div>
 </div>
 <br>
-<p-message id="infoMedicion" severity="info"
-  text="El color seleccionado se aplica a la capa actual. Si la capa actual es de poligonos el color se aplica al relleno de capa.">
+<p-message id="infoMedicion" severity="info" *ngIf="infoTool"
+  text="El color seleccionado se aplica a las capas cargadas. Si la capa seleccionada es de polígonos el color se aplica al relleno de capa.">
 </p-message>
