Ajuste: Separación de mensajes en funcionalidad de Ubicar cooxit

--- a/src/app/dialog-measurement/dialog-measurement.component.html
+++ b/src/app/dialog-measurement/dialog-measurement.component.html
@@ -17,6 +17,6 @@
     </div>
   </div>
   <p-message [escape]="false" id="infoMedicion" severity="info" *ngIf="infoTool"
-    text="Seleccione una herramienta y haga <b>clic</b> sobre el mapa para agregar puntos.<b>Doble clic</b> para terminar la medición.">
+    text="{{message}}">
   </p-message>
 </div>
