Ajuste: tamaño de la barra de carga corregido

--- a/src/app/dialog-urlservice/dialog-urlservice.component.html
+++ b/src/app/dialog-urlservice/dialog-urlservice.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="makingWork">
-  <p-progressBar mode="indeterminate" [style]="{'height': '6px', 'margin-bottom': '5px', 'margin-left': '-72px'}">
+  <p-progressBar mode="indeterminate" [style]="{'height': '6px', 'margin-bottom': '5px'}">
   </p-progressBar>
 </div>
 <form [formGroup]="serviceForm" (ngSubmit)="sendUrl()">
