Ajuste: cambio de texto en ayuda componente Extraer area

--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -106,7 +106,7 @@
         4. Haga click en el mapa sobre el Elemento Geográfico (o “molde de corte”)
       </span>
       <span *ngIf="selectedPolygon.value != 'entity'">
-        3. Dibuje en el mapa el polígono
+        3. Dibuje el polígono en el mapa
       </span>
     </div>
     <p-button label="Extraer" icon="pi pi-download" (onClick)="extractShape()" [style]="{'margin-top': '5px'}">
