Ajuste: se realizan pequeños ajustes a multiselect e input

--- a/src/app/dialog-symbology-change/dialog-symbology-change.component.html
+++ b/src/app/dialog-symbology-change/dialog-symbology-change.component.html
@@ -20,7 +20,7 @@
           <p>Grosor del borde: </p>
         </div>
         <div class="ui-g-12 ui-md-6">
-          <input type="number" formControlName="borderSize" pInputText [min]="0">
+          <input type="number" formControlName="borderSize" pInputText [min]="0" [max]="10">
         </div>
         <div class="ui-g-12 ui-md-6">
           <p>Color para el relleno: </p>
