--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -161,7 +161,7 @@
     <p>3. Seleccione las capas a extraer</p>
     <div style="display: grid; grid-template-columns: auto auto; margin-bottom: 5px; margin-right: 5px;">
       <p-multiSelect [options]="optionsLayers" defaultLabel="Click aquí..." selectedItemsLabel="{0} items seleccionados"
-        [(ngModel)]="selectedLayers"></p-multiSelect>
+        [(ngModel)]="selectedLayers" maxSelectedLabels="2"></p-multiSelect>
       <div align="right">
         <p-button label="Extraer" icon="pi pi-download" (onClick)="extractShape()">
         </p-button>
