--- a/src/app/dialog-clear/dialog-clear.component.html
+++ b/src/app/dialog-clear/dialog-clear.component.html
@@ -24,7 +24,7 @@
           </p-tabPanel>
           <p-tabPanel header="Capas" leftIcon="esri-icon-layers">
             <div>
-              <p>Seleccione las capas que desea eliminar:</p>
+              <p>Seleccione las capas que desea eliminar y a continuación oculte la lista desplegada con el ícono <i class="pi pi-times"></i></p>
               <p-multiSelect [defaultLabel]="'Seleccionar'" formControlName="layers" [options]="layers"
                 selectedItemsLabel="{0} items seleccionados" emptyFilterMessage="Sin resultados"></p-multiSelect>
             </div>
